@@ -1,12 +1,11 @@
-package_info = {
+package = {
     'name': 'Pycman',
-    'version': '0.1.4',
+    'version': '0.1.5',
     'author': 'singein',
-    'email': 'singein@outlook.com'
-}
-
-scripts = {
-    'commit': 'git add . && cz commit',
-    'build': 'python setup.py bdist_wheel',
-    'default': 'echo 请输入明确的命令名称'
+    'email': 'singein@outlook.com',
+    "scripts": {
+        'commit': 'git add . && cz commit',
+        'build': 'python setup.py bdist_wheel',
+        'default': 'echo 请输入明确的命令名称'
+    }
 }
