@@ -1,6 +1,6 @@
 import sys
 import os
 
-__version__ = '0.1.4'
+__version__ = '0.1.5'
 
 sys.path.append(os.path.dirname(os.path.abspath(__file__)))
