@@ -9,7 +9,19 @@ class BuilderNotFound(BaseException):
     pass
 
 
-def get_builder(name):
+def get_builder(name: str) -> object:
+    """返回指定名称的的Builder, 当前Builder类型
+    可以在builder模块下按照Builder模板扩充
+    
+    Arguments:
+        name {str} -- builder模块所在的文件名
+    
+    Raises:
+        BuilderNotFound: builder模块找不到时触发
+    
+    Returns:
+        object -- 返回一个动态加载的builder类
+    """
     try:
         builder = importlib.__import__(name)
         return builder.Builder
