@@ -1,0 +1,8 @@
+def print_logo():
+    print(""" _ __   _   _   ___  _ __ ___    __ _  _ __
+| '_ \ | | | | / __|| '_ ` _ \  / _` || '_ \
+| |_) || |_| || (__ | | | | | || (_| || | | |
+| .__/  \__, | \___||_| |_| |_| \__,_||_| |_|
+|_|     |___/
+
+    """)
