@@ -1,6 +1,5 @@
 [metadata]
 name = pycman
-version = 0.1.4
 author = Singein Zhang
 author-email = singein@outlook.com
 summary = Python package manager
@@ -8,7 +7,7 @@ license = MIT
 description-file = 
     README.rst
 home-page = https://github.com/Singein/Pycman
-requires-python = >= 3.4
+requires-python = >= 3.6
 
 
 [files]
