@@ -1,0 +1,8 @@
+from pycman.utils import goto
+import os
+print(os.getcwd())
+
+with goto('./test'):
+    print(os.getcwd())
+
+print(os.getcwd())
